added methods for hvac